2000-07-11  Alan Modra  <alan@linuxcare.com.au>

	* elf64-hppa.c (get_dyn_name): Pass in section pointer instead of
	bfd pointer.  Print section id instead of bfd pointer for local
	syms.  Prefix addend with `+' for global syms as well as local.
	Correct calculation of name component lengths.
	(elf64_hppa_check_relocs): Update call to get_dyn_name.

	From David Huggins-Daines  <dhd@linuxcare.com>
	* elf-hppa.h (elf_hppa_relocate_section): Update calls here too.
	* elf64-hppa.c (elf64_hppa_check_relocs): Fix some warnings.
	(elf64_hppa_modify_segment_map): Likewise.

Tue Jul 11 17:21:52 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* elf.c (bfd_elf_get_sign_extend_vma): Return tendency of VMA
 	addresses to be "naturally" sign extended.  Return -1 if unknown.
	* bfd-in.h (bfd_elf_get_sign_extend_vma): Add declaration.
	* bfd-in2.h: Regenerate.

Tue Jul 11 16:25:52 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* ecoffswap.h (ecoff_get_off, ecoff_put_off): Add ECOFF_SIGNED_32
 	and ECOF_SIGNED_64 to list ways to extract an offset.
	(ecoff_swap_fdr_in, ecoff_swap_fdr_out, ecoff_swap_pdr_in,
 	ecoff_swap_pdr_out, ecoff_swap_ext_in, ecoff_swap_ext_out):
 	Update.
	* elf64-mips.c (ECOFF_SIGNED_64): Define instead of ECOFF_64.
	* elf32-mips.c (ECOFF_SIGNED_32): Define instead of ECOFF_32.

Tue Jul 11 16:03:04 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* elfcode.h (elf_object_p): Use bfd_set_start_address and not
 	bfd_get_start_address.
	(elf_swap_ehdr_in): Sign extend e_entry when applicable.
	(elf_swap_ehdr_out): Ditto.

2000-07-10  Alexander Aganichev  <AAganichev@hypercom.com>

	* archures.c (bfd_default_scan): Add set of bfd_mach_ cases for
	compatibility with older binutils.

2000-07-10  Alan Modra  <alan@linuxcare.com.au>

	* section.c (bfd_make_section_anyway): Start section_id at 0x10.
	(STD_SECTION): Avoid negative ids, instead use 0 to 3.

	From Ryan Bradetich  <rbradetich@uswest.net>
	* dwarf1.c (parse_die): Cure signed/unsigned char warnings.