@@ -1,3 +1,8 @@
+2000-07-12  Charles Wilson  <cwilson@ece.gatech.edu>
+
+	* libbfd.c (bfd_seek): fix 'seek beyond EOF' error when writing
+	out a structure that is BFD_IN_MEMORY.
+
 2000-07-11  Alan Modra  <alan@linuxcare.com.au>
 
 	* elf64-hppa.c (get_dyn_name): Pass in section pointer instead of
